--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,14 @@
 			<version>4.13.1</version>
 			<scope>test</scope>
 		</dependency>
+		
+		<!-- Duplicate code for Sonar Qube -->
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.13.1</version>
+			<scope>test</scope>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.codehaus.mojo/cobertura-maven-plugin -->
 		<dependency>
 			<groupId>org.codehaus.mojo</groupId>
